Thu May  7 21:42:51 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_rubyoptions.rb (test_indentation_check): add a test
	  for indentation check.  [ruby-dev:38382]

Thu May  7 16:40:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_flatten_bang): returns nil if nothing changed.
	  a patch from Marc-Andre Lafortune in [ruby-core:23382].

Thu May  7 14:26:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_sample): negative sample number is invalid.
	  [ruby-core:23374]

Thu May  7 14:16:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c, include/ruby/encoding.h: fixed types.

	* include/ruby/encoding.h (rb_enc_nth): long is used for index.

Thu May  7 14:01:55 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* range.c (r_le): fixed types.

	* range.c (range_eql): fixed rdoc.

Thu May  7 13:10:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (pipe_open): should be rb_pid_t.

Wed May  6 16:50:20 2009  Tanaka Akira  <akr@fsij.org>

	* math.c (math_gamma): use a table for positive small integers.

Wed May  6 09:27:04 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* README.ja: code for THINK_C does not exist already.  [Bug #1435]

Wed May  6 05:33:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (CFLAGS, CXXFLAGS): strips extra spaces.

Tue May  5 11:29:07 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/ifchange: Fix: arguments which begin with minus sign may
	  parsed as options.  Because of older systems, don't use --
	  but use parentheses.

Tue May  5 10:42:28 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json: Update to JSON 1.1.4.

Tue May  5 07:22:37 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* transcode.c: NOMAP is now multibyte direct map.

	* transcode.c: remove ASIS.

	* transcode_data.h: ditto.

	* tool/transcode-tb (ActionMap#generate_info): remove :asis.

	* tool/transcode-tb (ActionMap#generate_info): add :nomap0.

	* enc/trans/utf8_mac.trans: replace :asis by :nomap0.
